# Self-DeepResearch

./: .gitignore  README.md
backend/: .env.example  database.db  pyproject.toml  test_graph.py
backend/src/: db_models.py  graph.py  main.py  models.py  prompts.py
backend/src/agents/: planner.py  reporter.py  researcher.py  reviewer.py
backend/src/core/: config.py  llm.py
backend/src/tools/: search.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: ConfirmDialog.vue  HistorySidebar.vue  ReportView.vue  ResearchForm.vue  StatusLog.vue  ThemeToggle.vue  ThoughtChain.vue  Toast.vue
frontend/src/composables/: useCitations.ts  useToast.ts
